// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkChatNotification should render correctly with an icon 1`] = `
<DocumentFragment>
  <output
    aria-atomic="true"
    class="bpk-chat-notification"
    data-backpack-ds-component="ChatNotification"
    data-testid="bpk-chat-notification"
  >
    <span
      class="bpk-chat-notification__icon"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
        />
      </svg>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Thanks for your feedback!
    </span>
  </output>
</DocumentFragment>
`;

exports[`BpkChatNotification should render correctly without an icon 1`] = `
<DocumentFragment>
  <output
    aria-atomic="true"
    class="bpk-chat-notification"
    data-backpack-ds-component="ChatNotification"
    data-testid="bpk-chat-notification"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Thanks for your feedback!
    </span>
  </output>
</DocumentFragment>
`;
